[package]
name = "network_bootstrap"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = "0.12"
base64 = "0.22"
cached = "0.54"
dotenv = "0.15"
futures-util = "0.3"
hex = "0.4"
libp2p = { version = "0.55", features = [
  "dns",
  "tokio",
  "identify",
  "json",
  "kad",
  "ping",
  "pnet",
  "request-response",
  "secp256k1",
  "serde",
  "tcp",
  "yamux",
  "noise",
] }
once_cell = "1.20"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
